// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comment only 1`] = `
[
  {
    "scopes": [
      "source.mplstyle",
    ],
    "token": "  ",
  },
  {
    "scopes": [
      "source.mplstyle",
      "comment.line.number-sign.mplstyle",
      "punctuation.definition.comment.mplstyle",
    ],
    "token": "#",
  },
  {
    "scopes": [
      "source.mplstyle",
      "comment.line.number-sign.mplstyle",
    ],
    "token": " comment",
  },
]
`;

exports[`key and colon 1`] = `
[
  {
    "scopes": [
      "source.mplstyle",
      "entity.name.label.mplstyle",
    ],
    "token": "foo.bar",
  },
  {
    "scopes": [
      "source.mplstyle",
      "punctuation.separator.key-value.mapping.mplstyle",
    ],
    "token": ":",
  },
]
`;

exports[`key only 1`] = `
[
  {
    "scopes": [
      "source.mplstyle",
      "entity.name.label.mplstyle",
    ],
    "token": "foo.bar",
  },
]
`;

exports[`key, value and comment 1`] = `
[
  {
    "scopes": [
      "source.mplstyle",
      "entity.name.label.mplstyle",
    ],
    "token": "foo.bar",
  },
  {
    "scopes": [
      "source.mplstyle",
      "punctuation.separator.key-value.mapping.mplstyle",
    ],
    "token": ":",
  },
  {
    "scopes": [
      "source.mplstyle",
    ],
    "token": " ",
  },
  {
    "scopes": [
      "source.mplstyle",
      "support.constant.property-value.mplstyle",
      "meta.property-value.mplstyle",
    ],
    "token": "baz",
  },
  {
    "scopes": [
      "source.mplstyle",
    ],
    "token": "  ",
  },
  {
    "scopes": [
      "source.mplstyle",
      "comment.line.number-sign.mplstyle",
      "punctuation.definition.comment.mplstyle",
    ],
    "token": "#",
  },
  {
    "scopes": [
      "source.mplstyle",
      "comment.line.number-sign.mplstyle",
    ],
    "token": " comment",
  },
]
`;
